[gd_scene load_steps=2 format=3 uid="uid://c3i7rai8kuhfr"]

[ext_resource type="Script" path="res://scripts/Workspace/AppSettingsWindow.gd" id="1_y4fiy"]

[node name="AppSettingsWindow" type="Window"]
disable_3d = true
initial_position = 1
title = "Application Settings"
size = Vector2i(415, 406)
wrap_controls = true
transient = true
script = ExtResource("1_y4fiy")

[node name="BG" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="GridContainer" type="GridContainer" parent="BG"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="AutosaveLabel" type="Label" parent="BG/GridContainer"]
layout_mode = 2
text = "Autosave"
horizontal_alignment = 2

[node name="Autosave" type="CheckBox" parent="BG/GridContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 0

[node name="ASFrequencyLabel" type="Label" parent="BG/GridContainer"]
layout_mode = 2
text = "Autosave frequency (minutes)"
horizontal_alignment = 2

[node name="AutosaveFreq" type="SpinBox" parent="BG/GridContainer"]
layout_mode = 2
max_value = 120.0
rounded = true

[node name="HSeparator" type="HSeparator" parent="BG/GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="BG/GridContainer"]
layout_mode = 2

[node name="DefaultNoteColourLabel" type="Label" parent="BG/GridContainer"]
layout_mode = 2
text = "Default note colour"
horizontal_alignment = 2

[node name="DefaultNoteColour" type="ColorPickerButton" parent="BG/GridContainer"]
layout_mode = 2
text = "DefColor"

[node name="NoteFontLabel" type="Label" parent="BG/GridContainer"]
layout_mode = 2
text = "Note text font"
horizontal_alignment = 2

[node name="NoteFont" type="LineEdit" parent="BG/GridContainer"]
layout_mode = 2
placeholder_text = "Enter font name"
editable = false

[node name="ResetFontButton" type="Button" parent="BG/GridContainer"]
layout_mode = 2
disabled = true
text = "Reset default font"

[node name="FontsButton" type="Button" parent="BG/GridContainer"]
layout_mode = 2
disabled = true
text = "Open the fonts folder"

[node name="HSeparator4" type="HSeparator" parent="BG/GridContainer"]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="BG/GridContainer"]
layout_mode = 2

[node name="OpenProjectsButton" type="Button" parent="BG/GridContainer"]
layout_mode = 2
text = "Open the Projects folder"

[node name="OpenConfigButton" type="Button" parent="BG/GridContainer"]
layout_mode = 2
text = "Open the Config file"

[node name="HSeparator6" type="HSeparator" parent="BG/GridContainer"]
layout_mode = 2

[node name="HSeparator7" type="HSeparator" parent="BG/GridContainer"]
layout_mode = 2

[node name="CurrentVersion" type="Label" parent="BG/GridContainer"]
layout_mode = 2
text = "Current version: "
horizontal_alignment = 2

[node name="UpdateButton" type="Button" parent="BG/GridContainer"]
layout_mode = 2
text = "Check for updates"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="BG/GridContainer/Autosave" to="." method="_on_autosave_toggled"]
[connection signal="value_changed" from="BG/GridContainer/AutosaveFreq" to="." method="_on_autosave_freq_value_changed"]
[connection signal="color_changed" from="BG/GridContainer/DefaultNoteColour" to="." method="_on_default_note_colour_color_changed"]
[connection signal="pressed" from="BG/GridContainer/OpenProjectsButton" to="." method="_on_open_projects_button_pressed"]
[connection signal="pressed" from="BG/GridContainer/OpenConfigButton" to="." method="_on_open_config_button_pressed"]
[connection signal="pressed" from="BG/GridContainer/UpdateButton" to="." method="_on_update_button_pressed"]
